modify locate field

--- a/UI/create-report.html
+++ b/UI/create-report.html
@@ -40,17 +40,19 @@
           <option value="red-flag">Red Flag</option>
           <option value="intervention">Intervention</option>
         </select>
+        <br>
+        <div>
+        <h1>Click to add your location</h1>
+        <button class="btn">Get my location</button>
+        <div class="result"></div>
+        </div>
+        <br>
         <label for="attachment">Add media</label>
         <input type="file" accept="image/*, video/mp4" id="attachment"
             name="attachment" class="form-element" />
           <label for="title">Description </label>
           <textarea name="title" id="title" class="form-element" placeholder="Enter a brief description"
             col="10" required></textarea>
-            <div class="locate">
-              <h1>Click to add your location</h1>
-              <button class="buttonclick">Get my location</button>
-              <div class="result"></div>
-            </div>
 
         <button type="submit" class="btn">Create Record</button>
         
