--- a/UI/create-report.html
+++ b/UI/create-report.html
@@ -9,7 +9,6 @@
   Report Corruption
   </title>
   <link rel="stylesheet" href="./assets/css/main.css" />
-  <script src="./assets/js/locate.js"></script>
  
 </head>
 
@@ -17,15 +16,14 @@
 
   <header>
     <nav class="navbar">
-      <a href="index.html" class="navbar-logo">iReporter</a>
+      <a href="./" class="navbar-logo">iReporter</a>
       <button class="button-menu"><a class="button"></a></button>
       <ul class="navbar-menu">
         <li class="navbar-link"><a href="./login.html">Login</a></li>
         <li class="navbar-link"><a href="./signup.html">Sign Up</a></li>
-        <li class="navbar-link"><a href="create-report.html">Create Record</a></li>
-        <li class="navbar-link"><a href="user.html">Profile</a></li>
-        <li class="navbar-link"><a href="profile.html">Update-Record</a></li>
-        <li class="navbar-link active"><a href="admin.html">Admin</a></li>
+        <li class="navbar-link"><a href="./create-report.html">Create Record</a></li>
+        <li class="navbar-link"><a href="./profile.html">Profile</a></li>
+        <li class="navbar-link active"><a href="./admin.html">Admin</a></li>
       </ul>
     </nav>
   </header>
@@ -40,26 +38,27 @@
           <option value="red-flag">Red Flag</option>
           <option value="intervention">Intervention</option>
         </select>
-        <label for="attachment">Add media</label>
-        <input type="file" accept="image/*, video/mp4" id="attachment"
-            name="attachment" class="form-element" />
+        <br>
+        <div>
+        <h1>Click to add your location</h1>
+        <button class="btn">Get my location</button>
+        <div class="result"></div>
+        </div>
+        <br>
+        <label for="attachment">Upload media </label>
+        <input type="file" accept="image/*, video/mp4" id="attachment" name="attachment"
+          class="form-element" />
           <label for="title">Description </label>
           <textarea name="title" id="title" class="form-element" placeholder="Enter a brief description"
             col="10" required></textarea>
-            <div class="locate">
-              <h1>Click to add your location</h1>
-              <button class="buttonclick">Get my location</button>
-              <div class="result"></div>
-            </div>
 
         <button type="submit" class="btn">Create Record</button>
-        
       </form>
-
     </section>
   </main>
   <footer>
     <p class="footer-edit">iReporter | Copyright &copy; 2018</p>
   </footer>
 </body>
+
 </html>
