--- a/UI/index.html
+++ b/UI/index.html
@@ -9,13 +9,14 @@
    Report Corruption
   </title>
   <link rel="stylesheet" href="assets/css/main.css" />
+
 </head>
 
 <body>
   
   <header>
     <nav class="navbar">
-      <a href="index.html" class="navbar-logo">iReporter</a>
+      <a href="./" class="navbar-logo">iReporter</a>
       <button class="button-menu"><a class="button"></a></button>
       <ul class="navbar-menu">
         <li class="navbar-link"><a href="./login.html">Login</a></li>
@@ -32,11 +33,7 @@
           Corruption in Uganda is characterized by grand-scale theft of public funds and petty corruption involving public officials at all levels of society as well as widespread political patronage systems.
           <br>Therefore this plaftorm will help you report a corruptionincidence you have noticed anywhere in your area or community. let your vote count. Report Corruption.
       </p>
-     <div>
-       <img src ="assets/image/cor1.jpeg">
-       <img src = "assets/image/coverpage.jpeg">
-       <img src ="assets/image/images.jpeg">
-     </div>
+  
     </section>
 
   <footer>
@@ -44,4 +41,5 @@
   </footer>
 
 </body>
+<script src="./assets/js/script.js"></script>
 </html>
