--- a/UI/user.html
+++ b/UI/user.html
@@ -8,7 +8,7 @@
   <title>
   Report Corruption
   </title>
-  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
  
 </head>
 
@@ -28,17 +28,27 @@
       </ul>
     </nav>
   </header>
-    <main>
-        <section class="container form-container">
-            <h2 class="form-title">Profile</h2>
-            <form class="form-style" action="" method="post">
-                <img src ="nats.jpg" class=profile>
-                <p>Name:Abio Nataline Anyama</p>
-                <p>telephone : 0752030815</p>
-                <a href="update-profile.html">update profile</a>
-            </form>
-        </section>
-    </main>
+  <h1 class="title-user"> Ireporter User <span>Profile</span></h1>
+  <div class="user-profile">
+    <img class="avatar" src="nats.png" />
+      <div class="username">Nataline</div>
+    <div class="bio">
+      journalist at news media
+    </div>
+      <div class="description">
+       reporting about corruption
+    </div>
+    <ul class="data">
+      <li>
+        <span class="coru-heart"> Corruption must stop</span>
+      </li>
+   </ul>
+  </div>
+    <div class="vote">
+      <h1>let your vote count
+      </h1>
+    </div>
+    
     <footer>
         <p class="footer-edit">iReporter | Copyright &copy; 2018</p>
     </footer>
