--- a/UI/index.html
+++ b/UI/index.html
@@ -28,6 +28,7 @@
   <main>
     
     <section class="homepage">
+       <img src="assets/image/index4.jpg" class="background-image">
       <h2 class="homepage-title">REPORT CORRUPTION</h2>
       <p class="homepage-paragraph">
           Corruption in Uganda is characterized by grand-scale theft of public funds and petty corruption involving public officials at all levels of society as well as widespread political patronage systems.
@@ -36,10 +37,28 @@
   
     </section>
 
-  <footer>
-    <p class="footer-edit">iReporter | Copyright &copy; 2018</p>
-  </footer>
+   <div class="roll">
+      <marquee>
+      <p>Dont wait to see the country corrupt, be your own guardian incase of any corruption issue dont hold back. Report the issue to be sorted out."iREPORTER"  withi 3 steps you will e able to report the issue. *1-create an account, *2- login to the platform, *3- click to create a record. Own your country.</p>
+    </marquee>
+    </div>
 
+    <footer>
+        <div class="side-footer">
+            <h3>iReporter</h3>
+            corrupt minds<br>
+            country never grows<br>
+            so stop corruption
+          </div>
+      <div class="central-footer">
+        <h3>Subscribe to our newsletter! <span class="pinkheart">&hearts;</span></h3>
+      <input type="email" placeholder="Enter your email" name="email" id="email" accesskey="s" required>
+      <button>GO</button>
+    </div>
+    <div class="side-footer">
+      &copy; 2018 abio nataline. All rights reserved.|iReporter 
+    </div>
+    </footer>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
